--- a/VoiceLikeMe/Info.plist
+++ b/VoiceLikeMe/Info.plist
@@ -27,15 +27,20 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>BebasNeue.otf</string>
+		<string>coolvetica crammed rg.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<string>Main</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIRequiresFullScreen</key>
+	<false/>
+	<key>UIStatusBarHidden</key>
+	<false/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
